clusters/themachine/platform/action-runner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: action-runner
  namespace: action-runner
  labels:
    app.kubernetes.io/name: action-runner
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: action-runner
  ports:
    - name: http
      port: 8080
      targetPort: http
