clusters/themachine/platform/action-runner/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: action-runner
  namespace: action-runner
  labels:
    app.kubernetes.io/name: action-runner
spec:
  rules:
    - host: actions.zakharhome.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: action-runner
                port:
                  name: http
